--- a/package.json
+++ b/package.json
@@ -4,27 +4,16 @@
   "description": "В данной проектной работе было реализован макет Место в данном макете есть popup редактирования профиля,логотип Место, фотокарточк и footer в данной работе используется display flex, display grid, взаимодействие javascript,",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack",
+    "build": "webpack --mode production",
     "dev": "webpack serve"
   },
   "author": "Artur Sayahov",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.4",
-    "autoprefixer": "^10.4.14",
-    "babel-loader": "^9.1.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.8.1",
-    "cssnano": "^6.0.1",
-    "html-webpack-plugin": "^5.5.1",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss-loader": "^7.3.2",
-    "webpack": "^5.85.1",
-    "webpack-cli": "^5.1.3",
-    "webpack-dev-server": "^4.15.0"
-  },
   "dependencies": {
-    "core-js": "^3.30.2"
+  
+  },
+  "devDependencies": {
+    "webpack": "^5.85.1",
+    "webpack-cli": "^5.1.3"
   }
 }
